--- a/2.css
+++ b/2.css
@@ -90,6 +90,17 @@ p em {
   right: 75vw;
   z-index: -100;
 }
+.bgpic {
+  width: 40vw;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 45vw;
+  right: 0;
+  top: 22vh;
+  text-align: center;
+  z-index: -100;
+}
 
 
 @font-face {
