--- a/12.css
+++ b/12.css
@@ -48,7 +48,7 @@ html, body {
 }
 .s {
   position: absolute;
-  bottom: 0px;
+  bottom: 15px;
   left: 20px;
   cursor: pointer;
 }
@@ -156,6 +156,19 @@ p em {
   top: 50vh;
   right: 40vw;
   z-index: -100;
+}
+
+a {
+  font-family: "AUTHENTIC Sans", sans-serif;
+  font-weight: regular;
+  color: var(--blue);
+  font-size: 1.5vw;
+  line-height: 1.5vw;
+  margin-top: 0px;
+  margin-left: 0px;
+  margin-bottom: 20px;
+  hyphens: auto;
+  text-decoration-line: none;
 }
 
 
