--- a/2.css
+++ b/2.css
@@ -42,7 +42,7 @@ html, body {
 }
 .s {
   position: absolute;
-  bottom: 0px;
+  bottom: 15px;
   left: 20px;
   cursor: pointer;
 }
@@ -56,6 +56,19 @@ html, body {
 .fig2 {
   width: 90vw;
   max-height: 85vh;
+}
+
+a {
+  font-family: "AUTHENTIC Sans", sans-serif;
+  font-weight: regular;
+  color: var(--blue);
+  font-size: 1.5vw;
+  line-height: 1.5vw;
+  margin-top: 0px;
+  margin-left: 0px;
+  margin-bottom: 20px;
+  hyphens: auto;
+  text-decoration-line: none;
 }
 
 h3 {
@@ -77,6 +90,15 @@ p {
   margin-top: 0px;
   margin-left: 0px;
   hyphens: auto;
+}
+a {
+  font-family: "AUTHENTIC Sans", sans-serif;
+  font-weight: regular;
+  color: var(--blue);
+  font-size: 1.5vw;
+  line-height: 1.5vw;
+  margin-top: 0px;
+  margin-left: 0px;
 }
 p em {
   font-family: "Favorite Song", sans-serif;
