--- a/1.css
+++ b/1.css
@@ -22,8 +22,8 @@ html, body {
 }
 .area {
   float: left;
-  margin-top: 25px;
-  margin-left: 30px;
+  margin-top: 0px;
+  margin-left: 10px;
   width: 100%;
   position: relative;
 }
@@ -43,8 +43,9 @@ html, body {
 .svgs {
   width: 98vw;
   //margin: auto;
-  display: block;
-  max-height: 98vh;
+  display: absolute;
+  top: 0px;
+  max-height: 100vh;
 }
 
 :root {
